# Loom

./: .gitignore  alembic.ini  ecosystem.config.js  instruction.md  pyproject.toml
dashboard/: middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard/app/: layout.tsx  page.tsx
dashboard/app/expo/: layout.tsx
dashboard/app/login/: layout.tsx  page.tsx
dashboard/app/resume-tailor/: layout.tsx
dashboard/components/layout/: Header.tsx  Sidebar.tsx
frontend/: .env.example  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
loom/: __init__.py  api.py  cli.py
loom/actions/: __init__.py
loom/chat/: __init__.py  organizer.py  router.py  session.py
loom/core/: __init__.py  action.py  context.py  pipeline.py  registry.py  step.py  trigger.py  trigger_registry.py
loom/llm/: __init__.py  client.py
loom/mcp/: __init__.py
loom/prompts/: emphasis_terms.py  resume_template.md  resume_template.tex
loom/scripts/: backfill_bullets.py  migrate_json_to_pg.py
loom/services/: __init__.py  logger.py  pdf_generator.py  translator.py
loom/steps/: __init__.py  generate_resume.py  match_profile.py  parse_jd.py  select_bullets.py
loom/storage/: __init__.py  base.py  bullet.py  database.py  execution.py  init_db.py  json_file.py  models.py  postgres.py  profile.py  project.py  repository.py  resume.py  seed.py  usage.py
loom/triggers/: __init__.py  manual.py
loom/workflows/: __init__.py  resume_tailor.py
output/: resume_f6a631a1.md  resume_f6a631a1.tex
(+47 files in other folders)
